sfdx-source/storybank/main/default/objects/Contact/fields/Experience_w_Media__c.field-meta.xml
<CustomField>
    <fullName>Experience_w_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience w/ Media?</label>
    <type>Checkbox</type>
</CustomField>