sfdx-source/storybank/main/default/objects/Contact/fields/Sexual_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Orientation__c</fullName>
    <label>Sexual Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Heterosexual</fullName>
            </value>
            <value>
                <fullName>Homosexual</fullName>
            </value>
            <value>
                <fullName>Bisexual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>