sfdx-source/storybank/main/default/objects/Contact/fields/Storyteller_Notes__c.field-meta.xml
<CustomField>
    <fullName>Storyteller_Notes__c</fullName>
    <label>Storyteller Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>