sfdx-source/storybank/main/default/objects/Contact/fields/Team_Source__c.field-meta.xml
<CustomField>
    <fullName>Team_Source__c</fullName>
    <description>This field tracks the Team(s) that acquired this contact. This field may be set by the Storybank App&#39;s create Contact functionality.</description>
    <label>Team Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Storybank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>