sfdx-source/storybank/main/default/objects/Contact/fields/Veteran__c.field-meta.xml
<CustomField>
    <fullName>Veteran__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veteran</label>
    <type>Checkbox</type>
</CustomField>